--- a/apps/immich/base/resources/persistentvolume.yaml
+++ b/apps/immich/base/resources/persistentvolume.yaml
@@ -2,31 +2,29 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  labels:
-    type: local
-  name: immich-library
+  name: immich-data
 spec:
   accessModes:
     - ReadWriteOnce
   capacity:
     storage: 100Gi
   hostPath:
-    path: /srv/immich/library
+    path: /srv/immich
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: manual
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  labels:
-    type: local
-  name: immich-database
-spec:
-  accessModes:
-    - ReadWriteOnce
-  capacity:
-    storage: 10Gi
-  hostPath:
-    path: /srv/immich/database
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: manual
+  storageClassName: local-storage
+  volumeMode: Filesystem
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: immich-database
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   capacity:
+#     storage: 10Gi
+#   hostPath:
+#     path: /srv/immich/database
+#   persistentVolumeReclaimPolicy: Retain
+#   storageClassName: local-storage
+#   volumeMode: Filesystem
