--- a/apps/gitea/base/kustomization.yaml
+++ b/apps/gitea/base/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
-  - resources/statefulset.yaml
+  - resources/deployment.yaml
 
 configMapGenerator:
   - envs:
