--- a/apps/gitea/base/resources/deployment.yaml
+++ b/apps/gitea/base/resources/deployment.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   annotations:
     secret.reloader.stakater.com/reload: gitea-admin
@@ -14,7 +14,8 @@ spec:
     matchLabels:
       app.kubernetes.io/instance: gitea
       app.kubernetes.io/name: gitea
-  serviceName: gitea-http
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -61,6 +62,7 @@ spec:
             tcpSocket:
               port: http
             timeoutSeconds: 1
+          resources: {}
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
@@ -88,12 +90,12 @@ spec:
           image: docker.gitea.com/gitea:1.25.4-rootless
           imagePullPolicy: IfNotPresent
           name: init-directories
-          resources:
-            requests:
-              cpu: 100m
-              memory: 128Mi
+          resources: {}
           securityContext:
             allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
             readOnlyRootFilesystem: true
             runAsNonRoot: true
           volumeMounts:
@@ -124,12 +126,12 @@ spec:
           image: docker.gitea.com/gitea:1.25.4-rootless
           imagePullPolicy: IfNotPresent
           name: init-app-ini
-          resources:
-            requests:
-              cpu: 100m
-              memory: 128Mi
+          resources: {}
           securityContext:
             allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
             readOnlyRootFilesystem: true
             runAsNonRoot: true
           volumeMounts:
@@ -158,12 +160,12 @@ spec:
           image: docker.gitea.com/gitea:1.25.4-rootless
           imagePullPolicy: IfNotPresent
           name: configure-gitea
-          resources:
-            requests:
-              cpu: 100m
-              memory: 128Mi
+          resources: {}
           securityContext:
             allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
             readOnlyRootFilesystem: true
             runAsNonRoot: true
           volumeMounts:
@@ -174,9 +176,6 @@ spec:
             - mountPath: /usr/sbinx
               name: init
       securityContext:
-        fsGroup: 1000
-        runAsGroup: 1000
-        runAsUser: 1000
         seccompProfile:
           type: RuntimeDefault
       terminationGracePeriodSeconds: 60
@@ -192,7 +191,7 @@ spec:
           name: temp
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/instance: gitea
@@ -204,7 +203,8 @@ spec:
     matchLabels:
       app.kubernetes.io/instance: gitea
       app.kubernetes.io/name: gitea-valkey
-  serviceName: gitea-valkey-headless
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -216,29 +216,45 @@ spec:
             - --appendonly
             - !!str yes
           image: ghcr.io/valkey-io/valkey:9.0.2
+          livenessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - valkey-cli ping | grep PONG
+            failureThreshold: 3
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
           name: gitea-valkey
           ports:
             - containerPort: 6379
               name: valkey
-          resources:
-            limits:
-              memory: 128Mi
-            requests:
-              cpu: 10m
-              memory: 64Mi
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - valkey-cli ping | grep PONG
+            failureThreshold: 3
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 5
+          resources: {}
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
               drop:
                 - ALL
             readOnlyRootFilesystem: true
+            runAsGroup: 999
             runAsNonRoot: true
+            runAsUser: 999
           volumeMounts:
             - mountPath: /data
               name: data
       securityContext:
-        runAsGroup: 1000
-        runAsUser: 1000
+        fsGroup: 999
         seccompProfile:
           type: RuntimeDefault
       volumes:
