--- a/apps/gitea/base/resources/namespace.yaml
+++ b/apps/gitea/base/resources/namespace.yaml
@@ -3,6 +3,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    pod-security.kubernetes.io/enforce: privileged # because `hostPath`
-    pod-security.kubernetes.io/warn: restricted
+    pod-security.kubernetes.io/enforce: restricted
   name: gitea
