--- a/apps/immich/base/kustomization.yaml
+++ b/apps/immich/base/kustomization.yaml
@@ -8,7 +8,6 @@ resources:
   - resources/deployment.yaml
   - resources/httproute.yaml # TODO: use Ingress
   - resources/namespace.yaml
-  - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
-  - resources/statefulset.yaml
+  - resources/sopssecret.yaml
