--- a/apps/immich/base/resources/service.yaml
+++ b/apps/immich/base/resources/service.yaml
@@ -7,7 +7,6 @@ metadata:
     app.kubernetes.io/name: machine-learning
     app.kubernetes.io/service: immich-machine-learning
   name: immich-machine-learning
-  namespace: immich
 spec:
   ports:
     - name: http
@@ -24,21 +23,23 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app.kubernetes.io/component: postgres
     app.kubernetes.io/instance: immich
-    app.kubernetes.io/name: server
-    app.kubernetes.io/service: immich-server
-  name: immich-server
-  namespace: immich
+    app.kubernetes.io/name: immich-postgres
+  name: nextcloud-postgres
 spec:
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
-    - name: http
-      port: 2283
+    - name: postgres
+      port: 5432
       protocol: TCP
-      targetPort: http
+      targetPort: 5432
   selector:
-    app.kubernetes.io/controller: main
+    app.kubernetes.io/component: postgres
     app.kubernetes.io/instance: immich
-    app.kubernetes.io/name: server
+    app.kubernetes.io/name: immich-postgres
   type: ClusterIP
 ---
 apiVersion: v1
@@ -46,12 +47,10 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/instance: immich
-    app.kubernetes.io/name: server-headless
-    app.kubernetes.io/service: immich-server-headless
-  name: immich-server-headless
-  namespace: immich
+    app.kubernetes.io/name: server
+    app.kubernetes.io/service: immich-server
+  name: immich-server
 spec:
-  clusterIP: None
   ports:
     - name: http
       port: 2283
@@ -71,8 +70,10 @@ metadata:
     app.kubernetes.io/name: valkey
     app.kubernetes.io/service: immich-valkey
   name: immich-valkey
-  namespace: immich
 spec:
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: redis
       port: 6379
@@ -92,9 +93,11 @@ metadata:
     app.kubernetes.io/name: valkey-headless
     app.kubernetes.io/service: immich-valkey
   name: immich-valkey-headless
-  namespace: immich
 spec:
   clusterIP: None
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: redis
       port: 6379
