--- a/apps/nextcloud/base/kustomization.yaml
+++ b/apps/nextcloud/base/kustomization.yaml
@@ -9,8 +9,7 @@ resources:
   - resources/httproute.yaml # TODO: use Ingress
   - resources/namespace.yaml
   - resources/networkpolicy.yaml
-  - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
-  - resources/statefulset.yaml
+  - resources/deployment.yaml
