--- a/apps/nextcloud/base/resources/deployment.yaml
+++ b/apps/nextcloud/base/resources/deployment.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/component: app
@@ -14,7 +14,8 @@ spec:
       app.kubernetes.io/component: app
       app.kubernetes.io/instance: nextcloud
       app.kubernetes.io/name: nextcloud
-  serviceName: nextcloud-headless
+  strategy:
+    type: Recreate
   template:
     metadata:
       annotations: {}
@@ -58,7 +59,7 @@ spec:
                   name: nextcloud-redis
             - name: REDIS_HOST_PORT
               value: !!str 6379
-          image: docker.io/library/nextcloud:32.0.5-apache
+          image: docker.io/library/nextcloud:32.0.5-fpm
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
@@ -93,7 +94,8 @@ spec:
                 - NET_BIND_SERVICE
               drop:
                 - ALL
-            runAsNonRoot: false # true
+            readOnlyRootFilesystem: false # TODO: true
+            runAsNonRoot: false # TODO: true
           volumeMounts:
             - mountPath: /var/www/
               name: nextcloud-main
@@ -119,8 +121,6 @@ spec:
       imagePullSecrets:
         - name: docker-hub
       securityContext:
-        # Will mount configuration files as www-data (id: 33) for nextcloud
-        fsGroup: 33
         seccompProfile:
           type: RuntimeDefault
       volumes:
@@ -129,65 +129,7 @@ spec:
             claimName: nextcloud-data
 ---
 apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  labels:
-    app.kubernetes.io/component: valkey
-    app.kubernetes.io/instance: nextcloud
-    app.kubernetes.io/name: nextcloud-valkey
-  name: nextcloud-valkey
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app.kubernetes.io/component: valkey
-      app.kubernetes.io/instance: nextcloud
-      app.kubernetes.io/name: nextcloud-valkey
-  serviceName: nextcloud-valkey-headless
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/component: valkey
-        app.kubernetes.io/instance: nextcloud
-        app.kubernetes.io/name: nextcloud-valkey
-    spec:
-      containers:
-        - args:
-            - --appendonly
-            - !!str yes
-          image: ghcr.io/valkey-io/valkey:9.0.2
-          name: valkey
-          ports:
-            - containerPort: 6379
-              name: valkey
-          resources:
-            limits:
-              memory: 128Mi
-            requests:
-              cpu: 10m
-              memory: 64Mi
-          securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-                - ALL
-            readOnlyRootFilesystem: true
-            runAsNonRoot: true
-          volumeMounts:
-            - mountPath: /data
-              name: data
-      securityContext:
-        runAsGroup: 1000
-        runAsUser: 1000
-        seccompProfile:
-          type: RuntimeDefault
-      volumes:
-        - name: data
-          persistentVolumeClaim:
-            claimName: nextcloud-valkey-data
----
-apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/component: postgres
@@ -201,7 +143,8 @@ spec:
       app.kubernetes.io/component: postgres
       app.kubernetes.io/instance: nextcloud
       app.kubernetes.io/name: nextcloud-postgres
-  serviceName: nextcloud-postgres-headless
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -222,7 +165,7 @@ spec:
                   name: nextcloud-postgres
             - name: POSTGRES_USER
               value: nextcloud
-          image: docker.io/library/postgres:17
+          image: docker.io/library/postgres:17.7
           livenessProbe:
             exec:
               command:
@@ -247,10 +190,10 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
           securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-                - ALL
+            # allowPrivilegeEscalation: false
+            # capabilities:
+            #   drop:
+            #     - ALL
             readOnlyRootFilesystem: true
             runAsNonRoot: true
           volumeMounts:
@@ -273,3 +216,78 @@ spec:
           name: run
         - emptyDir: {}
           name: tmp
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app.kubernetes.io/component: valkey
+    app.kubernetes.io/instance: nextcloud
+    app.kubernetes.io/name: nextcloud-valkey
+  name: nextcloud-valkey
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: valkey
+      app.kubernetes.io/instance: nextcloud
+      app.kubernetes.io/name: nextcloud-valkey
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/component: valkey
+        app.kubernetes.io/instance: nextcloud
+        app.kubernetes.io/name: nextcloud-valkey
+    spec:
+      containers:
+        - args:
+            - --appendonly
+            - !!str yes
+          image: ghcr.io/valkey-io/valkey:9.0.2
+          livenessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - valkey-cli ping | grep PONG
+            failureThreshold: 3
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 5
+          name: valkey
+          ports:
+            - containerPort: 6379
+              name: valkey
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - valkey-cli ping | grep PONG
+            failureThreshold: 3
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 5
+          resources: {}
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+            runAsGroup: 999
+            runAsNonRoot: true
+            runAsUser: 999
+          volumeMounts:
+            - mountPath: /data
+              name: data
+      securityContext:
+        fsGroup: 999
+        seccompProfile:
+          type: RuntimeDefault
+      volumes:
+        - name: data
+          persistentVolumeClaim:
+            claimName: nextcloud-valkey-data
