--- a/apps/nextcloud/base/resources/service.yaml
+++ b/apps/nextcloud/base/resources/service.yaml
@@ -23,48 +23,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/component: app
-    app.kubernetes.io/instance: nextcloud
-    app.kubernetes.io/name: nextcloud-headless
-  name: nextcloud-headless
-spec:
-  clusterIP: None
-  ports:
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: 80
-  selector:
-    app.kubernetes.io/component: app
-    app.kubernetes.io/instance: nextcloud
-    app.kubernetes.io/name: nextcloud
-  type: ClusterIP
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app.kubernetes.io/instance: nextcloud
-    app.kubernetes.io/name: nextcloud-valkey
-  name: nextcloud-valkey
-spec:
-  ports:
-    - name: valkey
-      port: 6379
-  selector:
-    app.kubernetes.io/instance: nextcloud
-    app.kubernetes.io/name: nextcloud-valkey
-  type: ClusterIP
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
     app.kubernetes.io/component: postgres
     app.kubernetes.io/instance: nextcloud
     app.kubernetes.io/name: nextcloud-postgres
   name: nextcloud-postgres
 spec:
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: postgres
       port: 5432
@@ -86,6 +52,9 @@ metadata:
   name: nextcloud-postgres-headless
 spec:
   clusterIP: None
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: postgres
       port: 5432
@@ -102,10 +71,32 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/instance: nextcloud
+    app.kubernetes.io/name: nextcloud-valkey
+  name: nextcloud-valkey
+spec:
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: valkey
+      port: 6379
+  selector:
+    app.kubernetes.io/instance: nextcloud
+    app.kubernetes.io/name: nextcloud-valkey
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/instance: nextcloud
     app.kubernetes.io/name: nextcloud-valkey-headless
   name: nextcloud-valkey-headless
 spec:
   clusterIP: None
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
     - name: valkey
       port: 6379
