--- a/apps/redirector/base/resources/deployment.yaml
+++ b/apps/redirector/base/resources/deployment.yaml
@@ -35,12 +35,7 @@ spec:
               port: http
             initialDelaySeconds: 5
             periodSeconds: 5
-          resources:
-            limits:
-              memory: 64Mi
-            requests:
-              cpu: 10m
-              memory: 32Mi
+          resources: {}
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
