--- a/apps/vaultwarden/base/resources/deployment.yaml
+++ b/apps/vaultwarden/base/resources/deployment.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   annotations:
     secret.reloader.stakater.com/reload: vaultwarden,vaultwarden-tls
@@ -17,7 +17,8 @@ spec:
       app.kubernetes.io/component: vaultwarden
       app.kubernetes.io/instance: vaultwarden
       app.kubernetes.io/name: vaultwarden
-  serviceName: vaultwarden-headless
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -31,7 +32,7 @@ spec:
                 name: vaultwarden
             - secretRef:
                 name: vaultwarden
-          image: ghcr.io/dani-garcia/vaultwarden:1.35.2-alpine
+          image: ghcr.io/dani-garcia/vaultwarden:1.35.3
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 10
@@ -80,9 +81,8 @@ spec:
       serviceAccountName: vaultwarden
       volumes:
         - name: data
-          hostPath:
-            path: /srv/vaultwarden
-            type: Directory
+          persistentVolumeClaim:
+            claimName: vaultwarden-data
         - name: data-tmp
           emptyDir:
             medium: Memory
