--- a/apps/vaultwarden/base/resources/persistentvolume.yaml
+++ b/apps/vaultwarden/base/resources/persistentvolume.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nextcloud-data
+  name: vaultwarden-data
 spec:
   accessModes:
     - ReadWriteOnce
   capacity:
-    storage: 10Gi
+    storage: 1Gi
   hostPath:
-    path: /srv/nextcloud
+    path: /srv/vaultwarden
     type: Directory
   persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
