--- a/infrastructure/controllers/metallb/base/resources/namespace.yaml
+++ b/infrastructure/controllers/metallb/base/resources/namespace.yaml
@@ -4,4 +4,5 @@ kind: Namespace
 metadata:
   labels:
     pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/warn: baseline
   name: metallb-system
