--- a/infrastructure/controllers/reloader/base/resources/deployment.yaml
+++ b/infrastructure/controllers/reloader/base/resources/deployment.yaml
@@ -56,13 +56,7 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 5
-          resources:
-            limits:
-              cpu: "1"
-              memory: 512Mi
-            requests:
-              cpu: 10m
-              memory: 512Mi
+          resources: {}
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
