--- a/apps/gitea/base/resources/persistentvolumeclaim.yaml
+++ b/apps/gitea/base/resources/persistentvolumeclaim.yaml
@@ -9,9 +9,8 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: local-storage
+  storageClassName: openebs-hostpath-retain
   volumeMode: Filesystem
-  volumeName: gitea-data
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
