--- a/apps/gitea/base/kustomization.yaml
+++ b/apps/gitea/base/kustomization.yaml
@@ -7,10 +7,9 @@ namespace: gitea
 resources:
   - resources/namespace.yaml
   - resources/networkpolicy.yaml
-  - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
-  - resources/statefulset.yaml
+  - resources/deployment.yaml
 
 configMapGenerator:
   - envs:
