--- a/apps/nextcloud/base/resources/deployment.yaml
+++ b/apps/nextcloud/base/resources/deployment.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/component: app
@@ -14,7 +14,8 @@ spec:
       app.kubernetes.io/component: app
       app.kubernetes.io/instance: nextcloud
       app.kubernetes.io/name: nextcloud
-  serviceName: nextcloud-headless
+  strategy:
+    type: Recreate
   template:
     metadata:
       annotations: {}
@@ -58,7 +59,7 @@ spec:
                   name: nextcloud-redis
             - name: REDIS_HOST_PORT
               value: !!str 6379
-          image: docker.io/library/nextcloud:32.0.5-apache
+          image: docker.io/library/nextcloud:32.0.5-fpm
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
@@ -93,7 +94,8 @@ spec:
                 - NET_BIND_SERVICE
               drop:
                 - ALL
-            runAsNonRoot: false # true
+            readOnlyRootFilesystem: false # TODO: true
+            runAsNonRoot: false # TODO: true
           volumeMounts:
             - mountPath: /var/www/
               name: nextcloud-main
@@ -119,8 +121,6 @@ spec:
       imagePullSecrets:
         - name: docker-hub
       securityContext:
-        # Will mount configuration files as www-data (id: 33) for nextcloud
-        fsGroup: 33
         seccompProfile:
           type: RuntimeDefault
       volumes:
@@ -129,7 +129,96 @@ spec:
             claimName: nextcloud-data
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
+metadata:
+  labels:
+    app.kubernetes.io/component: postgres
+    app.kubernetes.io/instance: nextcloud
+    app.kubernetes.io/name: nextcloud-postgres
+  name: nextcloud-postgres
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: postgres
+      app.kubernetes.io/instance: nextcloud
+      app.kubernetes.io/name: nextcloud-postgres
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/component: postgres
+        app.kubernetes.io/instance: nextcloud
+        app.kubernetes.io/name: nextcloud-postgres
+    spec:
+      containers:
+        - env:
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
+            - name: POSTGRES_DB
+              value: nextcloud
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: postgres-password
+                  name: nextcloud-postgres
+            - name: POSTGRES_USER
+              value: nextcloud
+          image: docker.io/library/postgres:17.7
+          livenessProbe:
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - nextcloud
+            failureThreshold: 3
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          name: postgres
+          ports:
+            - containerPort: 5432
+              name: postgres
+              protocol: TCP
+          readinessProbe:
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - nextcloud
+            failureThreshold: 3
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          securityContext:
+            # allowPrivilegeEscalation: false
+            # capabilities:
+            #   drop:
+            #     - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp
+            - mountPath: /var/run/postgresql
+              name: run
+            - mountPath: /var/lib/postgresql/data
+              name: data
+      imagePullSecrets:
+        - name: docker-hub
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
+      volumes:
+        - name: data
+          persistentVolumeClaim:
+            claimName: nextcloud-data
+        - emptyDir: {}
+          name: run
+        - emptyDir: {}
+          name: tmp
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/component: valkey
@@ -143,7 +232,8 @@ spec:
       app.kubernetes.io/component: valkey
       app.kubernetes.io/instance: nextcloud
       app.kubernetes.io/name: nextcloud-valkey
-  serviceName: nextcloud-valkey-headless
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -177,99 +267,9 @@ spec:
             - mountPath: /data
               name: data
       securityContext:
-        runAsGroup: 1000
-        runAsUser: 1000
         seccompProfile:
           type: RuntimeDefault
       volumes:
         - name: data
           persistentVolumeClaim:
             claimName: nextcloud-valkey-data
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  labels:
-    app.kubernetes.io/component: postgres
-    app.kubernetes.io/instance: nextcloud
-    app.kubernetes.io/name: nextcloud-postgres
-  name: nextcloud-postgres
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app.kubernetes.io/component: postgres
-      app.kubernetes.io/instance: nextcloud
-      app.kubernetes.io/name: nextcloud-postgres
-  serviceName: nextcloud-postgres-headless
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/component: postgres
-        app.kubernetes.io/instance: nextcloud
-        app.kubernetes.io/name: nextcloud-postgres
-    spec:
-      containers:
-        - env:
-            - name: PGDATA
-              value: /var/lib/postgresql/data/pgdata
-            - name: POSTGRES_DB
-              value: nextcloud
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  key: postgres-password
-                  name: nextcloud-postgres
-            - name: POSTGRES_USER
-              value: nextcloud
-          image: docker.io/library/postgres:17
-          livenessProbe:
-            exec:
-              command:
-                - pg_isready
-                - -U
-                - nextcloud
-            failureThreshold: 3
-            initialDelaySeconds: 30
-            periodSeconds: 10
-          name: postgres
-          ports:
-            - containerPort: 5432
-              name: postgres
-              protocol: TCP
-          readinessProbe:
-            exec:
-              command:
-                - pg_isready
-                - -U
-                - nextcloud
-            failureThreshold: 3
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-                - ALL
-            readOnlyRootFilesystem: true
-            runAsNonRoot: true
-          volumeMounts:
-            - mountPath: /tmp
-              name: tmp
-            - mountPath: /var/run/postgresql
-              name: run
-            - mountPath: /var/lib/postgresql/data
-              name: data
-      imagePullSecrets:
-        - name: docker-hub
-      securityContext:
-        seccompProfile:
-          type: RuntimeDefault
-      volumes:
-        - name: data
-          persistentVolumeClaim:
-            claimName: nextcloud-data
-        - emptyDir: {}
-          name: run
-        - emptyDir: {}
-          name: tmp
