--- a/infrastructure/controllers/traefik/base/resources/helmrelease.yaml
+++ b/infrastructure/controllers/traefik/base/resources/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
     crds: CreateReplace
   values:
     additionalArguments:
-      - --entrypoints.websecure.http.middlewares=traefik-security-headers@kubernetescrd
+      - --entrypoints.websecure.http.middlewares=traefik-retry@kubernetescrd,traefik-security-headers@kubernetescrd
       - --serversTransport.insecureSkipVerify=true
     deployment:
       replicas: 2
