--- a/apps/gitea/base/resources/deployment.yaml
+++ b/apps/gitea/base/resources/deployment.yaml
@@ -10,6 +10,7 @@ metadata:
   name: gitea
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app.kubernetes.io/instance: gitea
@@ -18,6 +19,8 @@ spec:
     type: Recreate
   template:
     metadata:
+      annotations:
+        kubectl.kubernetes.io/default-container: gitea
       labels:
         app.kubernetes.io/instance: gitea
         app.kubernetes.io/name: gitea
@@ -44,11 +47,12 @@ spec:
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 10
+            httpGet:
+              path: /api/healthz
+              port: http
             initialDelaySeconds: 200
             periodSeconds: 10
             successThreshold: 1
-            tcpSocket:
-              port: http
             timeoutSeconds: 1
           name: gitea
           ports:
@@ -56,11 +60,12 @@ spec:
               name: http
           readinessProbe:
             failureThreshold: 3
+            httpGet:
+              path: /api/healthz
+              port: http
             initialDelaySeconds: 5
             periodSeconds: 10
             successThreshold: 1
-            tcpSocket:
-              port: http
             timeoutSeconds: 1
           resources: {}
           securityContext:
@@ -199,6 +204,7 @@ metadata:
   name: gitea-valkey
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app.kubernetes.io/instance: gitea
