--- a/clusters/tombstone/apps.yaml
+++ b/clusters/tombstone/apps.yaml
@@ -38,6 +38,24 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: media-server
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cert-manager-config
+    - name: traefik-config
+  interval: 10m
+  path: ./apps/media-server/overlays/tombstone
+  prune: true
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: nextcloud
   namespace: flux-system
 spec:
