--- a/infrastructure/configs/traefik/resources/middleware.yaml
+++ b/infrastructure/configs/traefik/resources/middleware.yaml
@@ -24,6 +24,16 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
+  name: retry
+  namespace: traefik
+spec:
+  retry:
+    attempts: 6
+    initialInterval: 2s
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
   name: security-headers
   namespace: traefik
 spec:
