--- a/apps/redirector/base/resources/deployment.yaml
+++ b/apps/redirector/base/resources/deployment.yaml
@@ -12,6 +12,11 @@ spec:
   selector:
     matchLabels:
       app: redirector
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -28,14 +33,14 @@ spec:
             httpGet:
               path: /healthz
               port: http
-            initialDelaySeconds: 5
-            periodSeconds: 10
+              # initialDelaySeconds: 5
+              # periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /healthz
               port: http
-            initialDelaySeconds: 5
-            periodSeconds: 5
+              # initialDelaySeconds: 5
+              # periodSeconds: 5
           resources: {}
           securityContext:
             allowPrivilegeEscalation: false
