--- a/apps/vaultwarden/base/resources/networkpolicy.yaml
+++ b/apps/vaultwarden/base/resources/networkpolicy.yaml
@@ -2,6 +2,9 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
+  labels:
+    app.kubernetes.io/instance: vaultwarden
+    app.kubernetes.io/name: vaultwarden
   name: vaultwarden
 spec:
   ingress:
