--- a/apps/vaultwarden/base/resources/persistentvolume.yaml
+++ b/apps/vaultwarden/base/resources/persistentvolume.yaml
@@ -2,6 +2,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  labels:
+    app.kubernetes.io/instance: vaultwarden
+    app.kubernetes.io/name: vaultwarden-data
   name: vaultwarden-data
 spec:
   accessModes:
