gitea: add CronJobs

--- a/apps/gitea/base/configs/app-ini.env
+++ b/apps/gitea/base/configs/app-ini.env
@@ -2,6 +2,7 @@ GITEA____WORK_PATH=/data
 GITEA__CACHE__ADAPTER=redis
 GITEA__CACHE__HOST=redis://gitea-valkey:6379/0
 GITEA__DATABASE__DB_TYPE=sqlite3
+GITEA__DATABASE__SQLITE_JOURNAL_MODE=WAL
 GITEA__INDEXER__ISSUE_INDEXER_TYPE=db
 GITEA__METRICS__ENABLED=false
 GITEA__OAUTH2__JWT_SECRET=JguF1-Hp2Ib6aknhMyIpQAjxAh1mxIrI-uZ0iEPS0dg
