--- a/infrastructure/repositories/helmrepository.yaml
+++ b/infrastructure/repositories/helmrepository.yaml
@@ -11,6 +11,15 @@ spec:
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
+  name: istio
+  namespace: flux-system
+spec:
+  interval: 1h
+  url: https://istio-release.storage.googleapis.com/charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
   name: metallb
   namespace: flux-system
 spec:
