--- a/apps/gitea/base/kustomization.yaml
+++ b/apps/gitea/base/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - resources/cronjob.yaml
   - resources/deployment.yaml
   - resources/namespace.yaml
-  - resources/networkpolicy.yaml
+  # - resources/networkpolicy.yaml
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
