--- a/apps/gitea/base/resources/deployment.yaml
+++ b/apps/gitea/base/resources/deployment.yaml
@@ -235,7 +235,7 @@ spec:
           name: gitea-valkey
           ports:
             - containerPort: 6379
-              name: valkey
+              name: redis
           readinessProbe:
             exec:
               command:
