--- a/apps/vaultwarden/base/kustomization.yaml
+++ b/apps/vaultwarden/base/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - resources/deployment.yaml
   - resources/ingress.yaml
   - resources/namespace.yaml
-  - resources/networkpolicy.yaml
+  # - resources/networkpolicy.yaml
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/role.yaml
