--- a/infrastructure/controllers/istio/base/resources/namespace.yaml
+++ b/infrastructure/controllers/istio/base/resources/namespace.yaml
@@ -3,7 +3,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    istio-injection: disabled
     pod-security.kubernetes.io/enforce: privileged
-    pod-security.kubernetes.io/warn: baseline
-  name: metallb-system
+  name: istio-system
