--- a/infrastructure/controllers/reloader/base/resources/namespace.yaml
+++ b/infrastructure/controllers/reloader/base/resources/namespace.yaml
@@ -3,5 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
+    istio-injection: disabled
     pod-security.kubernetes.io/enforce: restricted
   name: reloader
