--- a/infrastructure/controllers/traefik/base/resources/namespace.yaml
+++ b/infrastructure/controllers/traefik/base/resources/namespace.yaml
@@ -3,5 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
+    istio.io/dataplane-mode: ambient
     pod-security.kubernetes.io/enforce: restricted
   name: traefik
