--- a/apps/redirector/base/configs/nginx.conf
+++ b/apps/redirector/base/configs/nginx.conf
@@ -7,14 +7,6 @@ http {
 
   server {
     listen 8080;
-    server_name x.com *.x.com;
-
-    add_header Referrer-Policy "no-referrer" always;
-    return 301 https://xcancel.com$request_uri;
-  }
-
-  server {
-    listen 8080;
     server_name instagram.com *.instagram.com;
 
     add_header Referrer-Policy "no-referrer" always;
@@ -27,6 +19,15 @@ http {
 
     add_header Referrer-Policy "no-referrer" always;
     return 301 https://scribe.rip$request_uri;
+  }
+
+  server {
+    listen 8080;
+    server_name twitter.com *.twitter.com;
+    server_name x.com *.x.com;
+
+    add_header Referrer-Policy "no-referrer" always;
+    return 301 https://xcancel.com$request_uri;
   }
 
   server {
