--- a/apps/redirector/base/resources/certificate.yaml
+++ b/apps/redirector/base/resources/certificate.yaml
@@ -32,6 +32,21 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
+  name: twitter-com
+spec:
+  dnsNames:
+    - twitter.com
+    - "*.twitter.com"
+  duration: 168h
+  issuerRef:
+    kind: ClusterIssuer
+    name: ownca
+  renewBefore: 8h
+  secretName: twitter-com-tls
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
   name: x-com
 spec:
   dnsNames:
