--- a/clusters/tombstone/apps.yaml
+++ b/clusters/tombstone/apps.yaml
@@ -40,6 +40,23 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: kiali
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: istio
+  interval: 10m
+  path: ./apps/kiali/overlays/tombstone
+  prune: true
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: media-server
   namespace: flux-system
 spec:
@@ -82,7 +99,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cert-manager-config
+    - name: istio
     - name: sops-secrets-operator-crds
     - name: traefik-config
   interval: 10m
