--- a/infrastructure/controllers/traefik/base/resources/helmrelease.yaml
+++ b/infrastructure/controllers/traefik/base/resources/helmrelease.yaml
@@ -33,3 +33,7 @@ spec:
     service:
       spec:
         externalTrafficPolicy: Local
+        ipFamilies:
+          - IPv4
+          - IPv6
+        ipFamilyPolicy: RequireDualStack
