--- a/apps/redirector/base/resources/ingress.yaml
+++ b/apps/redirector/base/resources/ingress.yaml
@@ -45,6 +45,26 @@ spec:
                   name: http
             path: /
             pathType: Prefix
+    - host: twitter.com
+      http:
+        paths:
+          - backend:
+              service:
+                name: redirector
+                port:
+                  name: http
+            path: /
+            pathType: Prefix
+    - host: "*.twitter.com"
+      http:
+        paths:
+          - backend:
+              service:
+                name: redirector
+                port:
+                  name: http
+            path: /
+            pathType: Prefix
     - host: x.com
       http:
         paths:
@@ -74,6 +94,10 @@ spec:
         - medium.com
         - "*.medium.com"
       secretName: medium-com-tls
+    - hosts:
+        - twitter.com
+        - "*.twitter.com"
+      secretName: twitter-com-tls
     - hosts:
         - x.com
         - "*.x.com"
