--- a/apps/vaultwarden/base/resources/ingress.yaml
+++ b/apps/vaultwarden/base/resources/ingress.yaml
@@ -14,6 +14,6 @@ spec:
               service:
                 name: vaultwarden
                 port:
-                  name: https
+                  name: http
             path: /
             pathType: Prefix
