--- a/apps/vaultwarden/base/resources/service.yaml
+++ b/apps/vaultwarden/base/resources/service.yaml
@@ -8,10 +8,10 @@ metadata:
     app.kubernetes.io/name: vaultwarden
   name: vaultwarden
 spec:
-  ipFamilyPolicy: SingleStack
+  ipFamilyPolicy: PreferDualStack
   ports:
-    - name: https
-      port: 443
+    - name: http
+      port: 80
       protocol: TCP
       targetPort: 8080
   selector:
