--- a/infrastructure/controllers/istio/base/resources/helmrelease.yaml
+++ b/infrastructure/controllers/istio/base/resources/helmrelease.yaml
@@ -39,11 +39,20 @@ spec:
     remediation:
       retries: 3
   interval: 1h
+  postRenderers:
+    - kustomize:
+        patches:
+          - patch: |
+              - op: replace
+                path: /spec/revisionHistoryLimit
+                value: 0
+              - op: remove
+                path: /spec/template/spec/containers/0/resources
+            target:
+              kind: Deployment
   values:
     autoscaleEnabled: false
-    defaultResources: {}
     profile: ambient
-    resources: {}
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -63,9 +72,16 @@ spec:
     remediation:
       retries: 3
   interval: 1h
+  postRenderers:
+    - kustomize:
+        patches:
+          - patch: |
+              - op: remove
+                path: /spec/template/spec/containers/0/resources
+            target:
+              kind: DaemonSet
   values:
     profile: ambient
-    resources: {}
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -85,6 +101,13 @@ spec:
     remediation:
       retries: 3
   interval: 1h
+  postRenderers:
+    - kustomize:
+        patches:
+          - patch: |
+              - op: remove
+                path: /spec/template/spec/containers/0/resources
+            target:
+              kind: DaemonSet
   values:
     profile: ambient
-    resources: {}
