--- a/apps/media-server/overlays/tombstone/kustomization.yaml
+++ b/apps/media-server/overlays/tombstone/kustomization.yaml
@@ -6,7 +6,8 @@ namespace: media
 
 resources:
   - ../../base
-  - resources/ingress.yaml
+  - resources/certificate.yaml
+  - resources/httproute.yaml
   - resources/sopssecret.yaml
 
 patches:
