--- a/apps/gitea/base/resources/httproute.yaml
+++ b/apps/gitea/base/resources/httproute.yaml
@@ -2,7 +2,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: immich
+  labels:
+    app.kubernetes.io/instance: gitea
+    app.kubernetes.io/name: gitea
+  name: gitea
 spec:
   parentRefs:
     - kind: Gateway
@@ -11,5 +14,5 @@ spec:
       sectionName: websecure
   rules:
     - backendRefs:
-        - name: immich-server
-          port: 2283
+        - name: gitea-http
+          port: 3000
