--- a/apps/vaultwarden/base/kustomization.yaml
+++ b/apps/vaultwarden/base/kustomization.yaml
@@ -5,9 +5,10 @@ kind: Kustomization
 namespace: vaultwarden
 
 resources:
+  - resources/certificate.yaml
   - resources/cronjob.yaml
   - resources/deployment.yaml
-  - resources/ingress.yaml
+  - resources/httproute.yaml
   - resources/namespace.yaml
   # - resources/networkpolicy.yaml
   - resources/peerauthentication.yaml
