--- a/apps/vaultwarden/base/resources/httproute.yaml
+++ b/apps/vaultwarden/base/resources/httproute.yaml
@@ -2,7 +2,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: immich
+  labels:
+    app.kubernetes.io/instance: vaultwarden
+    app.kubernetes.io/name: vaultwarden
+  name: vaultwarden
 spec:
   parentRefs:
     - kind: Gateway
@@ -11,5 +14,5 @@ spec:
       sectionName: websecure
   rules:
     - backendRefs:
-        - name: immich-server
-          port: 2283
+        - name: vaultwarden
+          port: 80
