--- a/infrastructure/configs/flux-webhook/kustomization.yaml
+++ b/infrastructure/configs/flux-webhook/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: flux-system
 
 resources:
-  - resources/ingress.yaml
+  - resources/certificate.yaml
+  - resources/httproute.yaml
   - resources/networkpolicy.yaml
