--- a/infrastructure/configs/flux-webhook/resources/httproute.yaml
+++ b/infrastructure/configs/flux-webhook/resources/httproute.yaml
@@ -2,8 +2,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: immich
+  name: flux-webhook
 spec:
+  hostnames:
+    - tombstone.osborn.io
   parentRefs:
     - kind: Gateway
       name: traefik
@@ -11,5 +13,9 @@ spec:
       sectionName: websecure
   rules:
     - backendRefs:
-        - name: immich-server
-          port: 2283
+        - name: notification-controller
+          port: 80
+      matches:
+        - path:
+            type: PathPrefix
+            value: /hook/
