--- a/infrastructure/configs/traefik/kustomization.yaml
+++ b/infrastructure/configs/traefik/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: traefik
 
 resources:
-  - resources/ingress-redirect.yaml
+  - resources/gateway.yaml
+  - resources/httproute-redirect.yaml
   - resources/middleware.yaml
