--- a/apps/gitea/base/kustomization.yaml
+++ b/apps/gitea/base/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - resources/httproute.yaml
   - resources/namespace.yaml
   # - resources/networkpolicy.yaml
+  - resources/peerauthentication.yaml
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
