--- a/apps/immich/base/kustomization.yaml
+++ b/apps/immich/base/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - resources/deployment.yaml
   - resources/httproute.yaml
   - resources/namespace.yaml
+  - resources/peerauthentication.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
