--- a/apps/media-server/base/kustomization.yaml
+++ b/apps/media-server/base/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - resources/deployment.yaml
   - resources/namespace.yaml
   # - resources/networkpolicy.yaml
+  - resources/peerauthentication.yaml
   - resources/persistentvolume.yaml
   - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
