--- a/apps/redirector/base/kustomization.yaml
+++ b/apps/redirector/base/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - resources/deployment.yaml
   - resources/httproute.yaml
   - resources/namespace.yaml
+  - resources/peerauthentication.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
 
